--- a/code/public/css/main.css
+++ b/code/public/css/main.css
@@ -1,4 +1,10 @@
+@font-face {
+    font-family: 'Zpix';
+    src: url('/font/Zpix.ttf');
+}
+
 *{
   font-family: "Zpix";
-  font-weight: bolder;
+  font-size: 28px;
+  font-weight: 900;
 }
